cmake_minimum_required(VERSION 3.24)

include("../revision.cmake")

if (${GENERATE_TEST})
	message(STATUS "GENERATE_TEST enabled. Currently this target does not support it.")
endif()

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED true)

project(xtlp VERSION ${REVISION} LANGUAGES CXX)

set(NAME ${PROJECT_NAME}-${CMAKE_PROJECT_VERSION})

add_library(${NAME})

target_sources(${NAME} PRIVATE
	"sources/xtlp-base.cpp"
	"sources/xtlp-r100.cpp"
)

set_target_properties(${NAME} PROPERTIES PUBLIC_HEADER "include/xtlp.hpp")

if(${CMAKE_HOST_LINUX})
	file(CREATE_LINK ${CMAKE_STATIC_LIBRARY_PREFIX}${NAME}${CMAKE_STATIC_LIBRARY_SUFFIX} ${CMAKE_STATIC_LIBRARY_PREFIX}${PROJECT_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX} SYMBOLIC)
	install(TARGETS ${NAME} PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
	install(FILES ${CMAKE_STATIC_LIBRARY_PREFIX}${PROJECT_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX} ${CMAKE_STATIC_LIBRARY_PREFIX}${PROJECT_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX} TYPE LIB)
endif()